[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nms-memory-goblin"
version = "0.1.0"
description = "Early project skeleton for a future No Man's Sky memory utility."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymem>=1.14",
]

[project.scripts]
nms-memory-goblin = "nms_memory_goblin.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
